<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="google_maps_api_key_v2">AIzaSyBxT9530PBwyoUn8kDjTu3syPSK1yYKthM</string>
    <string name="install_google_map">Please install Google Maps</string>
    <string name="install_google_map_btn">Install from Play store</string>
    
    <string name="app_name">G8teway tracker</string>
    <string name="close">Close</string>
    <string name="refresh_description">Refresh devices\' location</string>
    <string name="progress_dialog">Retrieving information from g8teway. Please wait…</string>
    <string name="connectionParamsNotSet">Please fill connection parameters first</string>
    <string name="device">Device</string>

    <plurals name="located_devices">
        <item quantity="zero">No device located</item>
        <item quantity="one">1 device located</item>
        <item quantity="other">%d located devices</item>
    </plurals>

    <string name="today_and_total_located_devices">%1$d today, %2$d in total</string>
    <string name="today_and_not_displayed_located_devices">%1$d today, %2$d not displayed</string>

    <!-- Option Menu -->
    <string name="menuRefreshTitle">Refresh</string>
    <string name="menuSearchTitle">Search</string>
    <string name="menuSettingsTitle">Settings</string>
    <string name="menuCreditsTitle">Credits</string>

    <!-- Connection parameters -->
    <string name="connectionParameters">Connection parameters</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="client">Client</string>
    <string name="url">URL</string>
    <string name="userField_summary">Username used to connect to the g8teway</string>
    <string name="passwordField_summary">Only sent to g8teway, privacy respected</string>
    <string name="clientField_summary">Client name used to connect to the g8teway</string>
    <string name="urlField_summary">g8teway\'s API V2 address</string>
    <string name="default_url">http://g8teway.com/api/v2/</string>

    <!-- Display parameters -->
    <string name="displayParameters">Display parameters</string>
    <string name="displayInactiveDevicesTitle">Display not active devices</string>
    <string name="displayInactiveDevices">Devices not active today will be shown on the map</string>
    <string name="doNotDisplayInactiveDevices">Devices not active today will not be shown on the map</string>
    <string name="definitionOfRecentDevicesInMinutesTitle">Definition of recent devices</string>
    <string name="definitionOfRecentDevicesInMinutesSummary">If a device sent information during the last minutes defined here, it will be considered as recent.</string>
    <string name="definitionOfRecentDevicesInMinutesMessage">Maximum length in minutes to consider a device\'s information as recent</string>
    <string name="definitionOfHighlightedDevicesTitle">Highlighted devices</string>
    <string name="definitionOfHighlightedDevicesSummary">Enter devices\' unit ids to highlight them in red on the map</string>
    <string name="definitionOfHighlightedDevicesMessage">List unit_id of devices to highlight (comma separated)</string>
    
    <!-- Technical parameters -->
    <string name="technicalParameters">Technical parameters</string>
    <string name="sendErrbitReportsTitle">Send error reports</string>
    <string name="sendErrbitReports">Error reports will be sent to developer</string>
    <string name="doNotsendErrbitReports">Error reports won\'t be sent</string>

    <!-- device dialog menu -->
    <string name="unitid">unitid: </string>
    <string name="modid">IMEI: </string>
    <string name="validity">Validity: </string>

    <!-- search -->
    <string name="search_hint">unitid</string>
    <string name="search_label">label</string>
    <string name="noDeviceKnown">No device known, refresh first</string>
    <string name="noDeviceFound">No device found</string>
    <string name="emptyQuery">Query is empty</string>

    <!-- errors -->
    <string name="networkNotConnected">No connection, please activate one.</string>

    <!-- Credits -->
    <string name="creditsTitle">Credits</string>
    <string name="creditsText">Laurent Fallet\nlaurent.fallet AT gmail.com\n2014</string>

</resources>